feat: validation check

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
             <header class="main-header">
                 <nav class="all-navigation">
                     <a href="index.html" class="logo">
-                        <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
+                        <img src="img/icons/logo.svg" alt="логотип сайта седоны" width="140" height="70">
                     </a>
                     <ul class="navigation">
                         <li class="navigation-item">
@@ -62,7 +62,7 @@
                 <section class="filter">
                     <h1>Гостиницы Седоны</h1>
                     <div class="filter-links">
-                        <a class="filter-home-page filter-hotel-link" href="index.html">
+                        <a class="filter-hotel-link" href="index.html">
                             <img src="img/icons/home-page.svg" alt="ссылка на домашнюю страницу" width="13" height="15">
                         </a>
                         <a href="#" class="filter-hotel-link">Гостиницы</a>
@@ -129,10 +129,10 @@
                                 </div>
                                 <div class="range-scale">
                                     <div class="range-bar">
-                                        <button class="range-toggle toggle-min">
+                                        <button class="range-toggle toggle-min" type="button">
                                             <span class="visually-hidden">изменить минимальную цену</span>
                                         </button>
-                                        <button class="range-toggle toggle-max">
+                                        <button class="range-toggle toggle-max" type="button">
                                             <span class="visually-hidden">изменить максимальную цену</span>
                                         </button>
                                     </div>
@@ -239,7 +239,6 @@
                             <p class="rank">Рейтинг: <span>5,0</span></p>
                         </li>
                     </ul>
-                    <div class="light-line"></div>
                     <ul class="pagination">
                         <li class="pagination-item">
                             <a class="pagination-link pagination-current" href="#">1</a>
@@ -254,6 +253,7 @@
                             <a class="pagination-link button-blue" href="#">4</a>
                         </li>
                         <li class="pagination-item">
+                            <span class="visually-hidden">промежуточные стариницы</span>
                             <a class="pagination-link pagination-etc" href="#">...</a>
                         </li>
                         <li class="pagination-item">
@@ -377,7 +377,7 @@
                                             fill-opacity="0.3" />
                                     </svg>
                                 </button>
-                                <input class="field field-number" type="number" name="adult-count" value="1">
+                                <input class="field field-number" type="number" name="adult-count" value="2">
                                 <button class="button-plus" type="button">
                                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -411,7 +411,7 @@
                                             fill-opacity="0.3" />
                                     </svg>
                                 </button>
-                                <input class="field field-number" type="number" name="child-count" value="0">
+                                <input class="field field-number" type="number" name="child-count" value="2">
                                 <button class="button-plus" type="button">
                                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
