--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="main-header">
         <nav class="all-navigation">
           <a href="index.html" class="logo">
-            <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
+            <img src="img/icons/logo.svg" alt="логотип сайта седоны" width="140" height="70">
           </a>
           <ul class="navigation">
             <li class="navigation-item">
@@ -129,9 +129,9 @@
           <h2 class="hotel-search-h2">Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки,<br>
             и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="button-brown button-search-hotel" href="#">
+          <button class="button-brown button-search-hotel" type="button">
             ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
-          </a>
+          </button>
         </section>
 
         <!-- SUBSCRIBE -->
@@ -247,7 +247,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="adult-count" value="1">
+                <input class="field field-number" type="number" name="adult-count" value="2">
                 <button class="button-plus" type="button">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -275,7 +275,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="child-count" value="0">
+                <input class="field field-number" type="number" name="child-count" value="2">
                 <button class="button-plus" type="button">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
