fix:overflow and not addition

--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <link rel="stylesheet" href="styles/common-style.css">
-        <link rel="stylesheet" href="styles/catalog.css">
+        <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" href="favicon.ico">
         <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
         <link rel="alternate icon" type="image/png" href="img/favicon/favicon.png">
@@ -195,9 +194,11 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 4000 ₽</span>
-                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <span class="button-more button-brown">
+                                <a class="button-more-link" href="#">подробнее</a>
+                            </span>
                             <button class="button-favorite button-blue" type="button">в избранное</button>
-                            <img src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
                             <p class="rank">Рейтинг: <span>8,5</span></p>
                         </li>
                         <li class="hotel-item">
@@ -208,9 +209,11 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 5000 ₽</span>
-                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <span class="button-more button-brown">
+                                <a class="button-more-link" href="#">подробнее</a>
+                            </span>
                             <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
-                            <img src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
                             <p class="rank">Рейтинг: <span>9,2</span></p>
                         </li>
                         <li class="hotel-item">
@@ -221,9 +224,11 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 2500 ₽</span>
-                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <span class="button-more button-brown">
+                                <a class="button-more-link" href="#">подробнее</a>
+                            </span>
                             <button class="button-favorite button-blue" type="button">в избранное</button>
-                            <img src="img/icons/threeStars.svg" alt="3 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/threeStars.svg" alt="3 звезды" width="140" height="37">
                             <p class="rank">Рейтинг: <span>6,9</span></p>
                         </li>
                         <li class="hotel-item">
@@ -233,9 +238,11 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 1500 ₽</span>
-                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <span class="button-more button-brown">
+                                <a class="button-more-link" href="#">подробнее</a>
+                            </span>
                             <button class="button-favorite button-blue" type="button">в избранное</button>
-                            <img src="img/icons/twoStars.svg" alt="2 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/twoStars.svg" alt="2 звезды" width="140" height="37">
                             <p class="rank">Рейтинг: <span>5,0</span></p>
                         </li>
                     </ul>
