--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial.scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="styles/common-style.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
     <link rel="alternate icon" type="image/png" href="img/favicon/favicon.png">
@@ -72,50 +71,52 @@
 
         <!-- ADVANTAGE -->
         <section class="advantage" id="advantage">
-          <div class="advantage-item">
-            <h3 class="advantage-h3">Настоящий городок</h3>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </div>
-          <div class="advantage-item advantage-img">
-            <img src="img/images/true-city.jpg" alt="дом среди цветов" width="800" height="385">
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantage-h3">Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantage-h3">Красивая<br> дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantage-h3">Мало<br> туристов</h3>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </div>
-          <div class="advantage-item advantage-img">
-            <img src="img/images/devil-bridge.jpg" alt="рыжие горы" width="800" height="385">
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantage-h3">Там есть<br> мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </div>
+          <ul class="advantage-list">
+            <li class="advantage-item">
+              <h3 class="advantage-h3">Настоящий городок</h3>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </li>
+            <li class="advantage-item advantage-img">
+              <img src="img/images/true-city.jpg" alt="дом среди цветов" width="800" height="385">
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-h3">Небольшая площадь</h3>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-h3">Красивая<br> дорога</h3>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-h3">Мало<br> туристов</h3>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantage-item advantage-img">
+              <img src="img/images/devil-bridge.jpg" alt="рыжие горы" width="800" height="385">
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-h3">Там есть<br> мост дьявола</h3>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+          </ul>
           <div class="slogan">
             <h2 class="slogan-name">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
             <p>Опытный персонал и качественное обслуживание!</p>
           </div>
-          <ul class="advantage-list">
-            <li class="advantage-list-item">
+          <ul class="advantage-advice">
+            <li class="advantage-advice-item">
               <img src="img/icons/home.svg" alt="домик" width="75" height="72">
               <h3 class="recommend-h3">Жильё</h3>
               <p>Рекомендуем пожить<br> в настоящем мотеле,<br>
                 всё как в кино!</p>
             </li>
-            <li class="advantage-list-item">
+            <li class="advantage-advice-item">
               <img src="img/icons/food.svg" alt="бургер" width="75" height="72">
               <h3 class="recommend-h3">Еда</h3>
               <p>Всегда заказывайте<br>
                 топовый фирменный бургер,<br> вы не разочаруетесь!</p>
             </li>
-            <li class="advantage-list-item">
+            <li class="advantage-advice-item">
               <img src="img/icons/souvenir.svg" alt="коробка с бантиком" width="75" height="72">
               <h3 class="recommend-h3">Сувениры</h3>
               <p>Не только китайского,<br>
@@ -135,8 +136,8 @@
         </section>
 
         <!-- SUBSCRIBE -->
-        <section class="subscribe">
-          <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
+        <section class="light-subscribe">
+          <h2 class="light-subscribe-h2">Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="email">Ваш e-mail</label>
