--- a/catalog.html
+++ b/catalog.html
@@ -198,7 +198,8 @@
                                 <a class="button-more-link" href="#">подробнее</a>
                             </span>
                             <button class="button-favorite button-blue" type="button">в избранное</button>
-                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140"
+                                height="37">
                             <p class="rank">Рейтинг: <span>8,5</span></p>
                         </li>
                         <li class="hotel-item">
@@ -213,7 +214,8 @@
                                 <a class="button-more-link" href="#">подробнее</a>
                             </span>
                             <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
-                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/fourStars.svg" alt="4 звезды" width="140"
+                                height="37">
                             <p class="rank">Рейтинг: <span>9,2</span></p>
                         </li>
                         <li class="hotel-item">
@@ -228,7 +230,8 @@
                                 <a class="button-more-link" href="#">подробнее</a>
                             </span>
                             <button class="button-favorite button-blue" type="button">в избранное</button>
-                            <img class="rank-stars" src="img/icons/threeStars.svg" alt="3 звезды" width="140" height="37">
+                            <img class="rank-stars" src="img/icons/threeStars.svg" alt="3 звезды" width="140"
+                                height="37">
                             <p class="rank">Рейтинг: <span>6,9</span></p>
                         </li>
                         <li class="hotel-item">
