--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- HEADER -->
       <header class="main-header">
         <nav class="all-navigation">
-          <a href="index.html" class="logo">
+          <a class="logo" href="index.html">
             <img src="img/icons/logo.svg" alt="логотип сайта седоны" width="140" height="70">
           </a>
           <ul class="navigation">
@@ -243,7 +243,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="adult-count" value="2" required>
+                <input class="field field-number" type="number" name="adult-count" min="1" max="20" value="2" step="1" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -254,7 +254,7 @@
             <div class="modal-content-child">
               <span class="modal-content-name">Дети:</span>
               <span class="tooltip">
-                <button class="tooltip-toggle" type="button" aria-labelledby="подсказка">
+                <button class="tooltip-toggle" type="button" aria-label="подсказка">
                   <svg width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white" />
                   </svg>
@@ -271,7 +271,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="child-count" value="2" required>
+                <input class="field field-number" type="number" name="child-count" min="0" max="20" step="1" value="2" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
