fix: bags after review

--- a/catalog.html
+++ b/catalog.html
@@ -103,12 +103,12 @@
               <div class="range">
                 <div class="price-wrapper">
                   <label class="price-form">
-                    <input class="price-form-field price-form-one" type="number" min="0" max="15000" name="min-price"
+                    <input class="price-form-field price-form-one inupt-number" type="number" min="0" max="15000" name="min-price"
                       value="0" required>
                     <span class="price-form-name">от</span>
                   </label>
                   <label class="price-form">
-                    <input class="price-form-field price-form-two" type="number" min="0" max="12000" name="max-price"
+                    <input class="price-form-field price-form-two inupt-number" type="number" min="0" max="12000" name="max-price"
                       value="9000" required>
                     <span class="price-form-name">до</span>
                   </label>
@@ -361,7 +361,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" id="number-adult" type="number" name="adult-count"  min="1" max="20" step="1" value="2" required>
+                <input class="field field-number inupt-number" id="number-adult" type="number" name="adult-count"  min="1" max="20" step="1" value="2" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -391,7 +391,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" id="number-child" type="number" name="child-count" min="0" max="20" step="1" value="2" required>
+                <input class="field field-number inupt-number" id="number-child" type="number" name="child-count" min="0" max="20" step="1" value="2" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
