--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
           </span>
           <div class="modal-content-people">
             <div class="modal-content-adult">
-              <span class="modal-content-name">Взрослые:</span>
+              <label for="adult-count" class="modal-content-name">Взрослые:</label>
               <div class="button-number">
                 <button class="button-minus" type="button" aria-label="уменьшить количество">
                   <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="adult-count" min="1" max="20" value="2" step="1" required>
+                <input class="field field-number inupt-number" type="number" id="adult-count" name="adult-count" min="1" max="20" value="2" step="1" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -252,7 +252,7 @@
               </div>
             </div>
             <div class="modal-content-child">
-              <span class="modal-content-name">Дети:</span>
+              <label for="child-count" class="modal-content-name">Дети:</label>
               <span class="tooltip">
                 <button class="tooltip-toggle" type="button" aria-label="подсказка">
                   <svg width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -271,7 +271,7 @@
                     <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
                 </button>
-                <input class="field field-number" type="number" name="child-count" min="0" max="20" step="1" value="2" required>
+                <input class="field field-number inupt-number" type="number" id="child-count" name="child-count" min="0" max="20" step="1" value="2" required>
                 <button class="button-plus" type="button" aria-label="увеличить количество">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
